src/test/deca/context/valid/created/assignation.deca
//Description :
// Assignation valide
//
// Resultats :
//


{
    int x;
    int y;

    x = y = 2;
}
