src/test/deca/context/invalid/created/init-int-bool.deca
//Description :
// Initialisation invalide
//
// Resultats :
// Erreur

{
    int x = true;
}
